# mybot

./: .gitignore  LICENSE  README.md  README_ARCHITECTURE.md  agent.py  browser.py  dispatcher.py  executor_prompt.py  flowchart  main.py  planner_prompt.py  pyproject.toml  requirements.txt  safety.py  setup.py  tools.py  tools_schema.py
core/mybot_core/: llm.py
