[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mybot"
version = "2.0.0"
description = "Local AI agent with Planner-Executor architecture"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai",
  "playwright"
]

[project.scripts]
mybot = "mybot_core.main:main"
